# BangPypers_talk

./: .gitignore  README.md  Word2Vec.ipynb  pyproject.toml
image_classification/: image_classification.ipynb
